// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emit option should invalidate the cache with disabled "emit" option: assets 1`] = `
Array [
  "main.js",
  "static/react.svg",
]
`;

exports[`emit option should invalidate the cache with disabled "emit" option: assets 2`] = `
Array [
  "main.js",
]
`;

exports[`emit option should invalidate the cache with disabled "emit" option: errors 1`] = `Array []`;

exports[`emit option should invalidate the cache with disabled "emit" option: errors 2`] = `Array []`;

exports[`emit option should invalidate the cache with disabled "emit" option: warnings 1`] = `Array []`;

exports[`emit option should invalidate the cache with disabled "emit" option: warnings 2`] = `Array []`;

exports[`emit option should work when emit option is "false": assets 1`] = `
Array [
  "main.js",
  "react.svg",
]
`;

exports[`emit option should work when emit option is "false": errors 1`] = `Array []`;

exports[`emit option should work when emit option is "false": warnings 1`] = `Array []`;

exports[`emit option should work when emit option is "true": assets 1`] = `
Array [
  "main.css",
  "main.js",
  "react.svg",
]
`;

exports[`emit option should work when emit option is "true": errors 1`] = `Array []`;

exports[`emit option should work when emit option is "true": warnings 1`] = `Array []`;

exports[`emit option should work with locals and invalidate cache when emit option is "false": DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
</head>
<body>
css.foo-bar-bar: U1vEH7XdNUSZSYwI
css.bar: eLo05W2yMd4ZSerD
css.baz: ak_rhnl0eZA3DHad
</body></html>"
`;

exports[`emit option should work with locals and invalidate cache when emit option is "false": DOM 2`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
</head>
<body>
css.foo-bar-bar-bar: YVktPYgR5yoht4RD
css.bar: eLo05W2yMd4ZSerD
css.baz: ak_rhnl0eZA3DHad
</body></html>"
`;

exports[`emit option should work with locals and invalidate cache when emit option is "false": assets 1`] = `
Array [
  "main.js",
]
`;

exports[`emit option should work with locals and invalidate cache when emit option is "false": assets 2`] = `
Array [
  "main.js",
]
`;

exports[`emit option should work with locals and invalidate cache when emit option is "false": errors 1`] = `Array []`;

exports[`emit option should work with locals and invalidate cache when emit option is "false": errors 2`] = `Array []`;

exports[`emit option should work with locals and invalidate cache when emit option is "false": warnings 1`] = `Array []`;

exports[`emit option should work with locals and invalidate cache when emit option is "false": warnings 2`] = `Array []`;

exports[`emit option should work with locals when emit option is "false": DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
</head>
<body>
css.foo-bar-bar: U1vEH7XdNUSZSYwI
css.bar: eLo05W2yMd4ZSerD
css.baz: ak_rhnl0eZA3DHad
</body></html>"
`;

exports[`emit option should work with locals when emit option is "false": errors 1`] = `Array []`;

exports[`emit option should work with locals when emit option is "false": warnings 1`] = `Array []`;

exports[`emit option should work with the "memory" cache and disabled "emit" option: assets 1`] = `
Array [
  "main.js",
  "static/react.svg",
]
`;

exports[`emit option should work with the "memory" cache and disabled "emit" option: assets 2`] = `
Array [
  "main.js",
  "static/react.svg",
]
`;

exports[`emit option should work with the "memory" cache and disabled "emit" option: errors 1`] = `Array []`;

exports[`emit option should work with the "memory" cache and disabled "emit" option: errors 2`] = `Array []`;

exports[`emit option should work with the "memory" cache and disabled "emit" option: warnings 1`] = `Array []`;

exports[`emit option should work with the "memory" cache and disabled "emit" option: warnings 2`] = `Array []`;

exports[`emit option should work without emit option: assets 1`] = `
Array [
  "main.bundle.js",
  "main.css",
  "react.svg",
]
`;

exports[`emit option should work without emit option: errors 1`] = `Array []`;

exports[`emit option should work without emit option: warnings 1`] = `Array []`;
